--- a/package.json
+++ b/package.json
@@ -1,12 +1,38 @@
 {
-  "name": "mis-project",
+  "name": "alama-connect",
   "version": "1.0.0",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "test": "jest"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "@fullcalendar/react": "^6.1.11",
+    "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.8.4",
+    "next": "^14.2.25",
+    "next-auth": "^4.24.11",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^4.12.0",
+    "react-redux": "^8.1.3",
+    "socket.io-client": "^4.8.1",
+    "tailwindcss": "^3.4.17"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.2.1",
+    "@types/node": "^20.17.25",
+    "@types/react": "^18.3.19",
+    "autoprefixer": "^10.4.21",
+    "eslint": "8.57.1",
+    "eslint-config-next": "15.2.3",
+    "jest": "^29.7.0",
+    "postcss": "^8.5.3",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.8.2"
+  }
 }
