--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,27 @@
-node_modules/ 
+# Dependencies
+node_modules/
+
+# Environment variables
+.env*.local
+
+# Build files
+.next/
+out/
+dist/
+
+# Debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDE files
+.vscode/
+.idea/
+
+# Local development
+*.local
+
+# Testing
+ .next/
+node_modules/
+package-lock.json
