--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@fullcalendar/react": "^6.1.11",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.8.4",
-    "next": "^14.2.25",
+    "next": "^14.1.0",
     "next-auth": "^4.24.11",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
     "socket.io-client": "^4.8.1",
@@ -26,12 +26,15 @@
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.2.1",
     "@types/node": "^20.17.25",
-    "@types/react": "^18.3.19",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.21",
     "eslint": "8.57.1",
     "eslint-config-next": "15.2.3",
     "jest": "^29.7.0",
-    "postcss": "^8.5.3",
+    "postcss": "^8.4.35",
+     "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^9.3.3",
     "ts-jest": "^29.1.1",
     "typescript": "^5.8.2"
   }
